--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lucide-react": "^0.563.0",
     "papaparse": "^5.5.3",
     "react": "^19.2.0",
+    "react-circular-progressbar": "^2.2.0",
     "react-dom": "^19.2.0",
     "recharts": "^3.7.0"
   },
